tests/macros/editor/plugin.stderr
error: option `plugin` does not exist for kind `editor`
 --> $DIR/plugin.rs:2:44
  |
2 |     let q = discourse::questions![Editor { plugin: todo!() }];
  |                                            ^^^^^^
