tests/macros/editor/plugin.rs
fn main() {
    let q = discourse::questions![Editor { plugin: todo!() }];
}
